--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TextTune for ESL - Elevate Your English Learning</title>
+    <title>FlexiRead for ESL - Elevate Your English Learning</title>
     <style>
         :root {
             --primary-color: #4361ee;
@@ -415,7 +415,7 @@
     <nav class="navbar">
         <div class="container navbar-container">
             <a href="index.html" class="logo">
-                <span class="logo-icon">📚</span>TextTune
+                <span class="logo-icon">📚</span>FlexiRead
             </a>
             <div class="nav-links">
                 <a href="#features" class="nav-link">Features</a>
@@ -430,8 +430,8 @@
     <section class="hero">
         <div class="container hero-content">
             <h1>Adjust English Text to Your Level</h1>
-            <p>TextTune for ESL helps learners improve their English by adjusting text to be slightly above their current level, creating the perfect learning challenge.</p>
-            <a href="app.html" class="hero-btn">Try TextTune Now</a>
+            <p>FlexiRead for ESL helps learners improve their English by adjusting text to be slightly above their current level, creating the perfect learning challenge.</p>
+            <a href="app.html" class="hero-btn">Try FlexiRead Now</a>
         </div>
     </section>
 
@@ -439,8 +439,8 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-title">
-                <h2>Why Choose TextTune</h2>
-                <p>TextTune makes English content accessible at your learning level</p>
+                <h2>Why Choose FlexiRead</h2>
+                <p>FlexiRead makes English content accessible at your learning level</p>
             </div>
             <div class="features-grid">
                 <div class="feature-card">
@@ -467,7 +467,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Frequently Asked Questions</h2>
-                <p>Get answers to common questions about TextTune</p>
+                <p>Get answers to common questions about FlexiRead</p>
             </div>
             <div class="faq-container">
                 <div class="faq-item">
@@ -477,9 +477,9 @@
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">How does TextTune modify text?</div>
+                    <div class="faq-question">How does FlexiRead modify text?</div>
                     <div class="faq-answer">
-                        <p>TextTune adjusts content to be slightly above your selected CEFR level by:</p>
+                        <p>FlexiRead adjusts content to be slightly above your selected CEFR level by:</p>
                         <ul>
                             <li>Simplifying or replacing complex vocabulary while preserving key terms</li>
                             <li>Restructuring complex sentences into more digestible forms</li>
@@ -489,7 +489,7 @@
                     </div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">How can I best use TextTune for learning?</div>
+                    <div class="faq-question">How can I best use FlexiRead for learning?</div>
                     <div class="faq-answer">
                         <p>For maximum learning benefits:</p>
                         <ul>
@@ -537,7 +537,7 @@
                 <div class="blog-card">
                     <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1519791883288-dc8bd696e667?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');"></div>
                     <div class="blog-content">
-                        <h3>AI Tools for Language Learners: Beyond TextTune</h3>
+                        <h3>AI Tools for Language Learners: Beyond FlexiRead</h3>
                         <div class="blog-meta">
                             <i>📅</i> April 5, 2025
                         </div>
@@ -554,7 +554,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>TextTune</h3>
+                    <h3>FlexiRead</h3>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#features">Features</a></li>
@@ -582,7 +582,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 TextTune for ESL. All rights reserved.</p>
+                <p>&copy; 2025 FlexiRead for ESL. All rights reserved.</p>
             </div>
         </div>
     </footer>
