--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
   <nav class="navbar">
     <div class="container navbar-container">
       <a href="index.html" class="logo">
-        <img src=src="https://github.com/zl3323/flexiread-website/blob/ab0619da2317664e39c8163c29c5f2311c2ed33d/logo-flexiread.png" alt="FlexiRead Logo" class="logo-img">
+        <img src="./logo-flexiread.png" alt="FlexiRead Logo" class="logo-img">
       </a>
       <div class="nav-links">
         <a href="#features" class="nav-link">Features</a>
