--- a/app.html
+++ b/app.html
@@ -70,7 +70,7 @@
     }
 
     .logo-img {
-      height: 36px;
+      height: 180px;
       width: auto;
       display: block;
     }
@@ -297,7 +297,7 @@
   <nav class="navbar">
     <div class="container navbar-container">
       <a href="index.html" class="logo">
-        <img src="logo-flexiread.png" alt="FlexiRead Logo" class="logo-img">
+        <img src="./logo-flexiread.png" alt="FlexiRead Logo" class="logo-img">
       </a>
       <div class="nav-links">
         <a href="index.html#features" class="nav-link">Features</a>
