--- a/blog1.html
+++ b/blog1.html
@@ -63,8 +63,16 @@
       align-items: center;
     }
 
+    .logo {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+    }
+
     .logo-img {
       height: 180px;
+      width: auto;
+      display: block;
     }
 
     .nav-links {
