--- a/blog1.html
+++ b/blog1.html
@@ -78,6 +78,7 @@
     .nav-links {
       display: flex;
       gap: 24px;
+      align-items: center;
     }
 
     .nav-link {
@@ -253,7 +254,7 @@
   <div class="blog-main">
     <img src="https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1373&q=80" alt="Blog cover" class="blog-cover">
     <h1 class="blog-title">Understanding CEFR Levels in ESL Learning</h1>
-    <div class="blog-date">🗕 March 15, 2025</div>
+    <div class="blog-date">March 15, 2025</div>
 
     <div class="blog-content">
       <p>Language learners often encounter the term "CEFR," yet many are unsure what it truly means or how it applies to their personal learning goals. This blog post demystifies the CEFR framework and explores how it can serve as a compass in your ESL journey.</p>
@@ -278,7 +279,7 @@
 
     <div class="blog-footer-nav">
       <a href="blog2.html">← Previous</a>
-      <a href="index.html#blog">🏠 Back to Blog</a>
+      <a href="index.html#blog">Back to Blog</a>
       <a href="blog3.html">Next →</a>
     </div>
   </div>
