--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
           <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1373&q=80');"></div>
           <div class="blog-content">
             <h3>Understanding CEFR Levels in ESL Learning</h3>
-            <div class="blog-meta">📅 March 15, 2025</div>
+            <div class="blog-meta">March 15, 2025</div>
             <p class="blog-excerpt">A comprehensive guide to CEFR levels and how they impact your English learning journey. Learn how to assess your current level and set achievable goals.</p>
             <a href="blog1.html" class="blog-link">Read More →</a>
           </div>
@@ -549,7 +549,7 @@
           <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1495446815901-a7297e633e8d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80');"></div>
           <div class="blog-content">
             <h3>Effective Reading Strategies for ESL Students</h3>
-            <div class="blog-meta">📅 March 28, 2025</div>
+            <div class="blog-meta">March 28, 2025</div>
             <p class="blog-excerpt">Discover proven techniques to improve your reading comprehension and vocabulary retention. Learn how to approach challenging texts strategically.</p>
             <a href="blog2.html" class="blog-link">Read More →</a>
           </div>
@@ -558,7 +558,7 @@
           <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1519791883288-dc8bd696e667?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80');"></div>
           <div class="blog-content">
             <h3>AI Tools for Language Learners: Beyond FlexiRead</h3>
-            <div class="blog-meta">📅 April 5, 2025</div>
+            <div class="blog-meta">April 5, 2025</div>
             <p class="blog-excerpt">Explore how AI is revolutionizing language learning. This article covers the most innovative tools and how to incorporate them into your study routine.</p>
             <a href="blog3.html" class="blog-link">Read More →</a>
           </div>
