--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             Content adjusted to be slightly above your CEFR level creates the optimal learning challenge, based on proven language acquisition research.
           </div>
         </div>
-        <img src='https://images.unsplash.com/photo-1581090700227-1e37b190418e?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDQxMzkxNTB8&ixlib=rb-4.0.3&q=85' alt="Feature illustration 3" class="feature-image">
+        <img src='./feature-1.png' alt="Feature illustration" class="feature-image">
       </div>
 
       <div class="feature-block">
@@ -461,7 +461,7 @@
             Use authentic articles, news, and websites instead of simplified textbook content. Learn from material you're actually interested in.
           </div>
         </div>
-        <img src='https://images.unsplash.com/photo-1581090700227-1e37b190418e?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDQxMzkxNTB8&ixlib=rb-4.0.3&q=85' alt="Feature illustration 3" class="feature-image">
+        <img src='./feature-2.png' alt="Feature illustration" class="feature-image">
       </div>
 
       <div class="feature-block">
@@ -472,7 +472,7 @@
             Paste any text or URL and get results in seconds. Compare the original with the adjusted version to see what's changed.
           </div>
         </div>
-        <img src='https://images.unsplash.com/photo-1581090700227-1e37b190418e?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDQxMzkxNTB8&ixlib=rb-4.0.3&q=85' alt="Feature illustration 3" class="feature-image">
+        <img src='./feature-3.png' alt="Feature illustration" class="feature-image">
       </div>
     </div>
   </section>
