--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: 40px;
+      gap: 60px;
       margin-bottom: 80px;
       flex-wrap: wrap;
     }
@@ -209,8 +209,8 @@
 
     .feature-image {
       flex: 1;
-      max-width: 360px; 
-      width: 100%;
+      min-width: 300px;
+      max-width: 500px;
       height: auto;
       object-fit: contain;   
       box-shadow: var(--box-shadow);
