--- a/app.html
+++ b/app.html
@@ -176,6 +176,9 @@
       border: 1px solid #ced4da;
       border-radius: var(--border-radius);
       margin-bottom: 20px;
+      resize: vertical;
+      overflow-x: hidden;
+      white-space: pre-wrap;
     }
 
     .button-container {
