--- a/index.html
+++ b/index.html
@@ -494,9 +494,10 @@
           <div class="faq-answer">
             <p>The Common European Framework of Reference for Languages (CEFR) is an international standard for describing language ability on a six-point scale: <strong>A1</strong> (beginner), <strong>A2</strong> (elementary), <strong>B1</strong> (intermediate), <strong>B2</strong> (upper intermediate), <strong>C1</strong> (advanced), and <strong>C2</strong> (proficiency).</p>
             <p>If you've taken standardized English tests, you can estimate your CEFR level using these equivalencies:</p>
-            <div style="display: flex; justify-content: center; margin: 20px 0;">
-              <img src="./CEFR-level.png" alt="CEFR Level Equivalencies" style="max-width: 100%; width: 600px; border-radius: 12px; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.15);">
+            <div style="display: flex; justify-content: center; margin: 15px 0;">
+              <img src="./CEFR-level.png" alt="CEFR Level Equivalencies" style="max-width: 100%; width: 400px; border-radius: 12px; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.15);">
             </div>
+            <p style="font-size: 0.8rem; color: var(--subtle-text); margin-top: 5px;">Source: Information adapted from Educational Testing Service (ETS) TOEFL score comparison guidelines. For more detailed information, visit <a href="https://www.ets.org/toefl/institutions/ibt/compare-scores.html#accordion-ff2afbe1ab-item-95a6512adf" style="color: var(--primary-color);">https://www.ets.org/toefl</a></p>
             <p><small>Source: Information adapted from Educational Testing Service (ETS) TOEFL score comparison guidelines. For more detailed information, visit <a href="https://www.ets.org/toefl/institutions/ibt/compare-scores.html#accordion-ff2afbe1ab-item-95a6512adf" style="color: var(--primary-color);">https://www.ets.org/toefl</a></small></p>
           </div>
         </div>
