--- a/app.html
+++ b/app.html
@@ -464,31 +464,23 @@
           </div>
         </div>
       </section>
-<!-- FAQ Section -->
-      <section id="faq" class="faq">
-        <div class="container">
-      <div class="section-title">
-        <h2>Frequently Asked Questions</h2>
-        <p>Get answers to common questions about FlexiRead</p>
-      </div>
-      <div class="faq-container">
+      <section class="faq-section">
+        <h2 style="text-align:center; color:var(--primary-color);">Frequently Asked Questions</h2>
         <div class="faq-item">
-          <div class="faq-question">
-            What is CEFR and how can I determine my level?
+          <div class="faq-question">What is CEFR and how can I determine my level?
             <span class="faq-icon">&#8675</span>
           </div>
           <div class="faq-answer">
             <p>The Common European Framework of Reference for Languages (CEFR) is an international standard for describing language ability on a six-point scale: <strong>A1</strong> (beginner), <strong>A2</strong> (elementary), <strong>B1</strong> (intermediate), <strong>B2</strong> (upper intermediate), <strong>C1</strong> (advanced), and <strong>C2</strong> (proficiency).</p>
             <p>If you've taken standardized English tests, you can estimate your CEFR level using these equivalencies:</p>
-            <div style="display: flex; justify-content: center; margin: 20px 0;">
-              <img src="./CEFR-level.png" alt="CEFR Level Equivalencies" style="max-width: 100%; width: 450px; border-radius: 12px; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.15);">
+            <div style="display: flex; justify-content: center; margin: 15px 0;">
+              <img src="./CEFR-level.png" alt="CEFR Level Equivalencies" style="max-width: 100%; width: 400px; border-radius: 12px; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.15);">
             </div>
-            <p><small>Source: Information adapted from Educational Testing Service (ETS) TOEFL score comparison guidelines. For more detailed information, visit <a href="https://www.ets.org/toefl/institutions/ibt/compare-scores.html#accordion-ff2afbe1ab-item-95a6512adf" style="color: var(--primary-color);">https://www.ets.org/toefl</a></small></p>
+            <p style="font-size: 0.8rem; color: var(--subtle-text); margin-top: 5px;">Source: Information adapted from Educational Testing Service (ETS) TOEFL score comparison guidelines. For more detailed information, visit <a href="https://www.ets.org/toefl/institutions/ibt/compare-scores.html#accordion-ff2afbe1ab-item-95a6512adf" style="color: var(--primary-color);">https://www.ets.org/toefl</a></p>
           </div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">
-            How does FlexiRead help improve my reading skills?
+          <div class="faq-question">How does FlexiRead help improve my reading skills?
             <span class="faq-icon">&#8675</span>
           </div>
           <div class="faq-answer">
@@ -504,8 +496,7 @@
           </div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">
-            How is FlexiRead different from using ChatGPT or other AI tools?
+          <div class="faq-question">How is FlexiRead different from using ChatGPT or other AI tools?
             <span class="faq-icon">&#8675</span>
           </div>
           <div class="faq-answer">
@@ -519,8 +510,7 @@
           </div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">
-            How can I best use FlexiRead to improve my language skills?
+          <div class="faq-question">How can I best use FlexiRead to improve my language skills?
             <span class="faq-icon">&#8675</span>
           </div>
           <div class="faq-answer">
@@ -535,9 +525,7 @@
             </ul>
           </div>
         </div>
-      </div>
-    </div>
-    </section>
+      </section>
     </main>
     <footer>
       <p>&copy; 2025 FlexiRead for ESL</p>
