--- a/blog1.html
+++ b/blog1.html
@@ -111,11 +111,12 @@
 
     .blog-cover {
       width: 100%;
-      height: 300px;
+      max-height: 220px;
       border-radius: var(--border-radius);
       box-shadow: var(--box-shadow);
-      object-fit: cover;
-      margin-bottom: 40px;
+      object-fit: contain;
+      margin: 0 auto 40px;
+      display: block;
     }
 
     .blog-title {
@@ -282,7 +283,7 @@
 
   <!-- Blog Content -->
   <div class="blog-main">
-    <img src="https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1373&q=80" alt="Blog cover" class="blog-cover">
+    <img src="./logo-flexiread.png" alt="FlexiRead Logo" class="blog-cover" style="height: 220px; width: auto; object-fit: contain;">
     <h1 class="blog-title">FlexiRead: Personalized Text Adaptation for ESL Learners</h1>
     <div class="blog-date">April 15, 2025</div>
 
@@ -398,12 +399,12 @@
 
       <div class="reference-list">
         <h3>References</h3>
-        <p>Alowais, A. (2021). The effects of leveled reading on second language learners. International Journal of Research in Education and Science, 7(4), 1281–1299.</p>
-        <p>Betts, E. A. (1946). Foundations of reading instruction, with emphasis on differentiated guidance. American Book Co.</p>
-        <p>Hoffman, J. V. (2017). What if "just right" is just wrong? The unintended consequences of leveling readers. The Reading Teacher, 71(3), 265–273.</p>
-        <p>Krashen, S. (1982). Principles and practice in second language acquisition. Pergamon Press.</p>
-        <p>Ryan, R. M., & Deci, E. L. (2000). Intrinsic and extrinsic motivations: Classic definitions and new directions. Contemporary educational psychology, 25(1), 54–67.</p>
-        <p>Vygotsky, L. S. (1978). Mind in Society: The Development of Higher Psychological Processes. Harvard University Press.</p>
+        <p>Alowais, A. (2021). The effects of leveled reading on second language learners. <em>International Journal of Research in Education and Science, 7</em>(4), 1281–1299.</p>
+        <p>Betts, E. A. (1946). <em>Foundations of reading instruction, with emphasis on differentiated guidance</em>. American Book Co.</p>
+        <p>Hoffman, J. V. (2017). What if "just right" is just wrong? The unintended consequences of leveling readers. <em>The Reading Teacher, 71</em>(3), 265–273.</p>
+        <p>Krashen, S. (1982). <em>Principles and practice in second language acquisition</em>. Pergamon Press.</p>
+        <p>Ryan, R. M., & Deci, E. L. (2000). Intrinsic and extrinsic motivations: Classic definitions and new directions. <em>Contemporary educational psychology, 25</em>(1), 54–67.</p>
+        <p>Vygotsky, L. S. (1978). <em>Mind in Society: The Development of Higher Psychological Processes</em>. Harvard University Press.</p>
       </div>
     </div>
 
