--- a/index.html
+++ b/index.html
@@ -564,9 +564,9 @@
         <div class="blog-card">
           <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1373&q=80');"></div>
           <div class="blog-content">
-            <h3>Understanding CEFR Levels in ESL Learning</h3>
-            <div class="blog-meta">March 15, 2025</div>
-            <p class="blog-excerpt">A comprehensive guide to CEFR levels and how they impact your English learning journey. Learn how to assess your current level and set achievable goals.</p>
+            <h3>FlexiRead: Personalized Text Adaptation for ESL Learners</h3>
+            <div class="blog-meta">April 15, 2025</div>
+            <p class="blog-excerpt">A comprehensive introduction regarding how FlexiRead addresses critical challenges faced by self-motivated ESL learners seeking to improve their reading skills independently.</p>
             <a href="blog1.html" class="blog-link">Read More →</a>
           </div>
         </div>
