--- a/blog2.html
+++ b/blog2.html
@@ -263,9 +263,9 @@
 
   <!-- Blog Content -->
   <div class="blog-main">
-    <img src="./blog2-cover.jpg" alt="FlexiRead Team at Columbia University" class="blog-cover">
+    <img src="./blog2-cover.png" alt="FlexiRead Team at Columbia University" class="blog-cover">
     <h1 class="blog-title">FlexiRead Showcased at Columbia University's Tech Day</h1>
-    <div class="blog-date">April 12, 2025</div>
+    <div class="blog-date">April 17, 2025</div>
 
     <div class="blog-content">
       <p>FlexiRead developers, Zehao Li and Sijia Chen, recently presented our innovative language learning tool at Columbia University's Language Technology Open House on April 11, 2025. This showcase marks a significant milestone in our product development journey, allowing us to gather valuable feedback from the language education community just weeks before our scheduled launch.</p>
